--- a/index.html
+++ b/index.html
@@ -18,47 +18,47 @@
         <p>by TEMPLATED</p>
     </header>
 
-    <section>
-        <div>
+    <section class="section1">
+        <div class="imgTop">
             <img src="./public/images/pic02.jpg" alt="">
         </div>
-        <div>
+        <div class="Titre">
             <h2>
                 fringilla fermentum tellus
             </h2>
             <hr> <!--il faut changer la width du hr -->
             <h4>vehicula urna sed justo bibendum</h4>
         </div>
-        <div>
+        <div class="section1Text">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vel doloribus in dolore labore eveniet sunt? Possimus laborum sint dolores!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde autem illum ut quam repellat explicabo incidunt quia, architecto iure facere ab, voluptatem iste illo aut est. Delectus sunt neque repellat error? Quibusdam voluptate quasi debitis? Sunt ratione temporibus quis deserunt.</p>
         </div>
     </section>
 
-    <section>
-        <div>
+    <section class="section2">
+        <div class="section2Text">
             <h2>
                 vestibulum convallis
             </h2>
             <hr> <!--il faut changer la width du hr -->
             <h4>vehicula urna sed justo bibendum</h4>
         </div>
-        <div>
+        <div class="imgRow">
             <img src="./public/images/pic03.jpg" alt="">
             <img src="./public/images/pic01.jpg" alt="">
         </div>
-        <div>
+        <div class="imgRow">
             <img src="./public/images/pic04.jpg" alt="">
             <img src="./public/images/pic05.jpg" alt="">
         </div>
     </section>
 
-    <section>
-        <div>
+    <section class="section3">
+        <div class="section3Row">
             <div>
                 <img src="./public/images/pic06.jpg" alt="">
             </div>
-            <div>
+            <div class="S3Text">
                 <h3>
                     viverra hendrerit
                 </h3>
@@ -67,8 +67,8 @@
                 </p>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="section3Row">
+            <div class="S3Text2">
                 <h3>
                     curabitur geret
                 </h3>
@@ -80,11 +80,11 @@
                 <img src="./public/images/pic07.jpg" alt="">
             </div>
         </div>
-        <div>
+        <div class="section3Row">
             <div>
                 <img src="./public/images/pic08.jpg" alt="">
             </div>
-            <div>
+            <div class="S3Text">
                 <h3>
                     morbi eleifend
                 </h3>
@@ -96,7 +96,7 @@
     </section>
 
     <footer>
-        <div>
+        <div class="FA_icons">
             <i class="fab fa-twitter"></i>
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
